--- a/views/paste/show.ejs
+++ b/views/paste/show.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <% include head %>
+  <% include ../layout/head %>
   <body>
     
-    <% include navbar %>
+    <% include ../layout/navbar %>
     
     <div class="container">
       
