added edit paste and logout

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
       
       <% if (!user) { %>
       <div class="alert alert-info">
-        <p>You are currently not logged in, this means you can not edit or delete anything you paste. <a href="/signup" class="alert-link">Sign Up</a> or <a href="" class="alert-link">Login</a></p>
+        <p>You are currently not logged in, this means you can not edit or delete anything you paste. <a href="/signup" class="alert-link">Sign Up</a> or <a href="/signin" class="alert-link">Login</a></p>
       </div>
       <% } else { %>
         <div class="alert alert-info">
