--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -8,6 +8,9 @@
       <div class="panel panel-default">
         <div class="panel-heading"><i class="fa fa-user"></i> Signup</div>
         <div class="panel-body">
+          
+          <% include errors %>
+          
           <form role="form" action="/users" method="post" autocomplete="off">
             <div class="form-group">
               <label for="email">Email</label>
