--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -5,30 +5,32 @@
     
     <% include ../layout/navbar %>
     <div class="container">
-      <div class="panel panel-default">
-        <div class="panel-heading"><i class="fa fa-user"></i> Signup</div>
-        <div class="panel-body">
+      <div class="col-md-offset-3 col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-heading"><i class="fa fa-user"></i> Signup</div>
+          <div class="panel-body">
           
-          <% include errors %>
+            <% include errors %>
           
-          <form role="form" action="/users" method="post" autocomplete="off">
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input id="email" class="form-control" type="email" name="email" placeholder="Email" value="<%= user.email || '' %>" required />
-            </div>
-            <div class="form-group">
-              <label for="username">Username</label>
-              <input id="username" class="form-control" type="text" name="username" placeholder="Username" value="<%= user.username || '' %>" required />
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input id="password" class="form-control" type="password" name="password" placeholder="Password" required/>
-            </div>
-            <div class="form-group">
-                <button class="btn btn-primary" type="submit">Sign up</button>&nbsp;
-                    or&nbsp;<a class="show-login" href="/signin">login</a>
-            </div>
-          </form>
+            <form role="form" action="/users" method="post" autocomplete="off">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input id="email" class="form-control" type="email" name="email" placeholder="Email" required />
+              </div>
+              <div class="form-group">
+                <label for="username">Username</label>
+                <input id="username" class="form-control" type="text" name="username" placeholder="Username" required />
+              </div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input id="password" class="form-control" type="password" name="password" placeholder="Password" required/>
+              </div>
+              <div class="form-group">
+                  <button class="btn btn-primary" type="submit">Sign up</button>&nbsp;
+                      or&nbsp;<a class="show-login" href="/signin">login</a>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
