fixed expired paste bug, added remove button in recent view

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -10,7 +10,7 @@
           <div class="panel-heading"><i class="fa fa-user"></i> Signup</div>
           <div class="panel-body">
           
-            <% include errors %>
+            <% include ../errors %>
           
             <form role="form" action="/users" method="post" autocomplete="off">
               <div class="form-group">
