--- a/views/paste/recent.ejs
+++ b/views/paste/recent.ejs
@@ -6,6 +6,9 @@
     <% include ../layout/navbar %>
     
     <div class="container">
+      
+      <% include ../errors %>
+      
       <h2>Recent Pastes</h2>
       <p>This page contains the most recent pastes that were created in the last 72 hours.</p>
       <table class="table">
