--- a/views/auth/signin.ejs
+++ b/views/auth/signin.ejs
@@ -11,7 +11,7 @@
           <div class="panel-heading"><i class="fa fa-user"></i> Signup</div>
           <div class="panel-body">
             
-            <% include errors %>
+            <% include ../errors %>
             
             <form role="form" action="/users/session" method="post" autocomplete="off">
               <div class="form-group">
